--- a/overrides/main.html
+++ b/overrides/main.html
@@ -25,7 +25,7 @@
 <div class="admonition warning version-warning">
     <p class="admonition-title">Version {{config.extra.version}}</p>
     <p>This documentation refers to the version {{config.extra.version}}.x of the web framework.
-    The current version of the <code>main</code> branch is <a href="/blacksheep/">documented here</a>.</p>
+    The most recent version of the framework is <a href="/blacksheep/">documented here</a>.</p>
 </div>
 {% endif %}
   {{ super() }}
